<resources>
    <string name="app_name">My Weather App</string>
    <string name="title_activity_forecast">Forecast</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="temperature">%1$d°</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="feels_like">%1$d°</string>
    <string name="tempMin">%1$d°</string>
    <string name="tempMax">%1$d°</string>
    <string name="humidity">%1$d</string>
    <string name="pressure">%1$d</string>
    <string name="date">Jan 26</string>
    <string name="sunrise">Sunrise: 8:00am</string>
    <string name="sunset">Sunset: 9:00pm</string>
    <string name="forecast">Forecast</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="zip_code">zip_code</string>
    <string name="txtSearch">Search</string>
    <string name="ok">OK</string>
    <string name="txtLocation">Use Location</string>
    <string name="txtNotification">Enable Notifications</string>
</resources>